# phys1494

./: .gitignore  pyproject.toml  readme.md
experiment1/: data.csv  gravitational_acceleration_data.csv  gravitational_constant.py  motion_analyzer.py  velocity_acceleration_graph.py
experiment10/: background.py  beta_particles.py  gamma_particles.py
experiment2/: bounding_box.py  run_bouding_box_analysis.py
experiment3/: currentCarryingRod.csv  current_carrying_rod_analysis.py
experiment4/: current_curvature_anlysis.py
experiment5/: angular_position_intensity.py  intensityAngularPosition_1.txt  intensityAngularPosition_2.txt  intensityAngularPosition_3.txt  linearPositionRelativeIntensity_1.txt  linearPositionRelativeIntensity_2.txt  linearPositionRelativeIntensity_3.txt  linearPositionRelativeIntensity_4.txt  linearPositionRelativeIntensity_5.txt  linearPositionRelativeIntensity_6.txt  linear_position_relative_intensity.py
experiment8/: capacitor_charging.py  capacitor_discharging.py
experiment9/: phase_shift.py  resonance.py  resonance_unkown_L.py
